﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: bug #1519799, imagelink error

2006-08-12 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.data.php: bug #1492772, parsing EXTRACT YEAR_MONTH
      (there were sorting errors in the function names array)
      also bug #1534007, STD function not working
    * lang/polish: updates, thanks to Jakub Wilk - ubanus
    * lang/swedish: Update, thanks to Björn T. Hallberg - bjornth.
    * lang/italian: Update, thanks to Rebe - rebeluca.
    * lang/japanese: Update, thanks to Ishigaki Kenichi - tcool.
    * lang/belarusian updates, thanks to Jaska Zedlik

2006-08-11 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php, import.php, libraries/parse_analyze.lib.php: 
      bug #1533945, wrong table name in header (SELECT from query window) 
    * libraries/auth/config.auth.lib.php: bug #1536112, config not loaded
      (MySQL error 2002 or 2003)

2006-08-11 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css\phpmyadmin.css.php, themes\*:
      updated themes to 2.9 and some minor fixes
      thanks to Juergen Wind - windkiel for hinting this (patch #1535169)

2006-08-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat
    * lang/catalan update, thanks to Xavier Navarro (xavin)
    * lang/galician: Update, thanks to Xosé Calvo - xosecalvo.
    * lang/estonian: Update, thanks to Marko Ellermaa - uhuu
    * lang/russian: update, thanks to Gosha Sakovich - gt2
    * libraries/common.lib.php: bug #1534475, arbitrary server

2006-08-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/mysql_charsets.lib.php: bug #1530574:
      MySQL 4.1.13 and double quotes in SHOW VARIABLES,
      thanks to Herve Pages
    * docs.css, Documentation.html: bug #1446538, FAQ numbers missing