@@ -192,6 +192,9 @@ while (list($operator) = each($GLOBALS['cfg']['UnaryOperators'])) {
     <tbody>
     <?php
     $odd_row = true;
+?>
+<script type="text/javascript" language="javascript" src="./js/tbl_change.js"></script>
+<?php
     for ($i = 0; $i < $fields_cnt; $i++) {
         ?>
         <tr class="<?php echo $odd_row ? 'odd' : 'even'; $odd_row = ! $odd_row; ?>">
@@ -276,9 +279,18 @@ while (list($operator) = each($GLOBALS['cfg']['UnaryOperators'])) {
         } else {
             // o t h e r   c a s e s
             echo '            <input type="text" name="fields[' . $i . ']"'
-                .' size="40" class="textfield" />' .  "\n";
-        }
-
+                .' size="40" class="textfield" id="field_' . $i . '" />' .  "\n";
+        };
+        $type = $fields_type[$i];
+        if ($type == 'date' || $type == 'datetime' || substr($type, 0, 9) == 'timestamp') {
+        ?>
+                    <script type="text/javascript" language="javascript">
+                    //<![CDATA[
+                    document.write('<a title="<?php echo $strCalendar;?>" href="javascript:openCalendar(\'<?php echo PMA_generate_common_url();?>\', \'insertForm\', \'field_<?php echo ($i); ?>\', \'<?php echo (PMA_MYSQL_INT_VERSION >= 40100 && substr($type, 0, 9) == 'timestamp') ? 'datetime' : substr($type, 0, 9); ?>\')"><img class="calendar" src="<?php echo $pmaThemeImage; ?>b_calendar.png" alt="<?php echo $strCalendar; ?>"/></a>');
+                    //]]>
+                    </script>
+        <?php
+        } 
         ?>
             <input type="hidden" name="names[<?php echo $i; ?>]"
                 value="<?php echo htmlspecialchars($fields_list[$i]); ?>" />
