@@ -7,6 +7,7 @@ $Source$
 
 2006-08-13 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/display_tbl.lib.php: bug #1519799, imagelink error
+    * tbl_select.php: feature #1520222, calendar in Search
 
 2006-08-12 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.data.php: bug #1492772, parsing EXTRACT YEAR_MONTH
